--- a/pom.xml
+++ b/pom.xml
@@ -26,19 +26,27 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.7</version>
-			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flume</groupId>
 			<artifactId>flume-ng-core</artifactId>
 			<version>${cdh-flume-version}</version>
-			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcprov-jdk15on</artifactId>
-			<version>1.54</version>
+			<groupId>org.apache.flume.flume-ng-sinks</groupId>
+			<artifactId>flume-hdfs-sink</artifactId>
+			<version>${cdh-flume-version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.flume</groupId>
+			<artifactId>flume-ng-node</artifactId>
+			<version>${cdh-flume-version}</version>
+		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.bouncycastle</groupId> -->
+<!-- 			<artifactId>bcprov-jdk15on</artifactId> -->
+<!-- 			<version>1.54</version> -->
+<!-- 		</dependency> -->
 	</dependencies>
 	<build>
 		<finalName>flume-plugins</finalName>
